# uv-project-template

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommands.sh
