[project]
name = "project"
version = "0.2.0"
description = "Your description here"
authors = [{ name="Your name"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]
# license = {file = "LICENSE"}
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["project*"]
